--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/dateformat": "^5.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "svelte": "^3.55.1",
@@ -20,5 +21,8 @@
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "dateformat": "^5.0.3"
   }
 }
